Fresh clean upload of QuranAble Edge

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "quranable-edge",
+  "description": "QuranAble Global Educational Platform",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@astrojs/sitemap": "^3.7.0",
+    "@tailwindcss/vite": "^4.2.0",
+    "astro": "^5.17.1",
+    "tailwindcss": "^4.2.0"
   }
 }
